Fix the scrollbar issue

--- a/_sass/_blog.scss
+++ b/_sass/_blog.scss
@@ -136,6 +136,8 @@ $author-img-size: 7.5rem;
   #disqus_thread {
     min-height: .01px;
     width: 100%;
+    box-sizing: border-box;
+    overflow-x: hidden;
   }
 
   .gist {
